--- a/src/WebView.xaml
+++ b/src/WebView.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="Widgets.WebView"
+﻿<UserControl x:Class="LostTech.Stack.Widgets.WebView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Widgets"
-             mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:helpers="clr-namespace:LostTech.Stack.Widgets.Helpers"
+             mc:Ignorable="d"
+             x:Name="Self"
              d:DesignHeight="450" d:DesignWidth="800">
-    <WebBrowser x:Name="Browser"/>
+    <helpers:TransparentWebBrowser x:Name="Browser" TargetElement="{Binding ., ElementName=Self}" Source="{Binding URL, Mode=OneWay, ElementName=Self}"/>
 </UserControl>
