added partial self-destruction to WebView

--- a/src/Helpers/WebBrowserOverlayWindow.xaml
+++ b/src/Helpers/WebBrowserOverlayWindow.xaml
@@ -7,6 +7,6 @@
         ShowInTaskbar="False"
         ResizeMode="NoResize">
   <WindowsFormsHost x:Name="wfh">
-    <winForms:WebBrowser x:Name="Browser" />
+    <winForms:WebBrowser x:Name="Browser" ScriptErrorsSuppressed="True" />
   </WindowsFormsHost>
 </Window>
