--- a/src/WebView.xaml
+++ b/src/WebView.xaml
@@ -3,9 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:helpers="clr-namespace:LostTech.Stack.Widgets.Helpers"
+             xmlns:communityToolkit="clr-namespace:Microsoft.Toolkit.Win32.UI.Controls.WPF;assembly=Microsoft.Toolkit.Win32.UI.Controls"
              mc:Ignorable="d"
              x:Name="Self"
+             Loaded="WebView_OnLoaded"
              d:DesignHeight="450" d:DesignWidth="800">
-    <helpers:TransparentWebBrowser x:Name="Browser" TargetElement="{Binding ., ElementName=Self}" Source="{Binding URL, Mode=OneWay, ElementName=Self}"/>
+  <communityToolkit:WebView x:Name="Browser" Source="{Binding URL, Mode=OneWay, ElementName=Self}"
+                            HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
 </UserControl>
