--- a/src/WebView.xaml
+++ b/src/WebView.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:communityToolkit="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls.WebView"
+             xmlns:wv="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
              mc:Ignorable="d"
              x:Name="Self"
              Loaded="WebView_OnLoaded"
              d:DesignHeight="450" d:DesignWidth="800">
-  <communityToolkit:WebView x:Name="Browser" Source="{Binding URL, Mode=OneWay, ElementName=Self}"
-                            HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+  <wv:WebView2 x:Name="Browser" Source="{Binding URL, Mode=OneWay, ElementName=Self}"
+               HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
 </UserControl>
